Fix period header content alignment

--- a/client/my-sites/stats/stats-period-navigation/style.scss
+++ b/client/my-sites/stats/stats-period-navigation/style.scss
@@ -32,7 +32,7 @@
 	&.stats-period-navigation--new-main-chart {
 		margin: 0;
 		padding: 0;
-		align-items: baseline;
+		align-items: center;
 
 		.stats-period-navigation__children {
 			text-align: left;
